Usable testing code. First test partially implemented. Example json files added.